agregando align-items baseline para ajustar la altura correcta de los items

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,6 +24,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: baseline;
 }
 
 .section-title {
